Feature/add email auth to signup (#54)
* chore: db 파일 추가

* feat: redis 의존성 추가

* fix: snippetsDir 수정

* feat: env 설정 추가

* feat: Redis 설정, Repository, ErrorCode 추가

* feat: introduce 필드 및 Enumerated 추가

* feat: 이메일 인증 관련 Dto 추가

* feat: 이메일 인증 관련 Dto 추가

* refactor: EmailVerificationDto -> EmailVerificationRequestDto 수정

* feat: OhrResponse 오버로딩 메서드 추가

* refactor: 불필요한 파일 제거

* feat: 이메일 인증 코드 요청/확인 API 추가

* feat: 이메일 인증 코드 요청/확인 SuccessCode 추가

* feat: 이메일 인증 코드 요청/확인 ErrorCode 추가

* feat: introduce 필드 추가

* feat: email 설정 추가

* feat: builder 어노테이션 추가

* docs: 회원 문서 수정

* test: 이메일 인증 코드 요청/확인 테스트 코드 작성

* feat: RestClientConfig 추가

* feat: 이메일 인증 코드 요청/확인 endpoint 추가

* feat: 이메일 인증 요청/확인 로직 추가

* feat: RedisExceptionHandler 추가
