# common/src/main/java/com/ourhomerecipe/dto/email/request/EmailAuthRequestDto.java
@@ -1,8 +1,7 @@
-package com.ourhomerecipe.dto.email;
+package com.ourhomerecipe.dto.email.request;
 
 import jakarta.validation.constraints.NotBlank;
 import jakarta.validation.constraints.Pattern;
-import jakarta.validation.constraints.Size;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
@@ -12,12 +11,8 @@ import lombok.NoArgsConstructor;
 @Builder
 @NoArgsConstructor
 @AllArgsConstructor
-public class EmailVerificationDto {
+public class EmailAuthRequestDto {
 	@Pattern(regexp = "^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,6}$", message = "유효하지 않은 이메일 형식입니다.")
 	@NotBlank(message = "이메일은 필수 항목입니다.")
 	private String email;
-
-	@NotBlank(message = "인증 번호는 필수 항목입니다.")
-	@Size(min = 6, max = 6, message = "인증 번호는 6자리 입니다.")
-	private String authCode;
 }
